--- a/styles/index.css
+++ b/styles/index.css
@@ -1,23 +1,29 @@
 @import url(./reset.css);
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");
 :root {
   --light-cyan: hsl(193, 38%, 86%);
   --neon-green: hsl(150, 100%, 66%);
   --grayish-blue: hsl(217, 19%, 38%);
   --dark-grayish-blue: hsl(217, 19%, 24%);
   --dark-blue: hsl(218, 23%, 16%);
+  --font: "Manrope", sans-serif;
 }
 body {
   background: var(--dark-blue);
+  font-family: var(--font);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 main {
   max-width: 45rem;
   margin: 0 auto;
   background: var(--dark-grayish-blue);
-  padding: 1rem;
+  padding: 1rem 3rem;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 4rem;
   position: relative;
 }
 h1,
@@ -27,11 +33,14 @@ h1 span {
 }
 h1 {
   text-align: center;
+  color: var(--neon-green);
 }
 blockquote {
-  font-size: clamp(2rem, 4vw, 5rem);
+  font-size: clamp(2.8rem, 4vw, 3.3rem);
   text-align: center;
+  line-height: 1.3;
   padding: 2rem;
+  color: var(--light-cyan);
 }
 
 .dice {
@@ -42,13 +51,25 @@ blockquote {
   background: var(--neon-green);
   padding: 0.2rem;
   border-radius: 50%;
-  left: 45%;
+  left: 44.5%;
   display: grid;
   place-items: center;
 }
+.dice:hover {
+  cursor: pointer;
+  box-shadow: 0rem 0rem 3rem var(--neon-green);
+}
 .attribution {
-  font-size: 11px;
+  padding: 0.4rem;
   text-align: center;
+  background: var(--light-cyan);
+  margin: 3rem auto;
+  max-width: 45rem;
+  border-radius: 0.3rem;
+}
+.attribution p,
+.attribution a {
+  font-size: 1.3rem;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
