--- a/styles/index.css
+++ b/styles/index.css
@@ -79,7 +79,7 @@ blockquote {
   main {
     max-width: 37rem;
     margin: 0;
-    padding: 1rem;
+    padding: 0;
     border-radius: 1rem;
   }
   .dice {
