--- a/styles/index.css
+++ b/styles/index.css
@@ -36,11 +36,12 @@ h1 {
   color: var(--neon-green);
 }
 blockquote {
-  font-size: clamp(2.8rem, 4vw, 3.3rem);
+  font-size: clamp(2rem, 4vw, 2.8rem);
   text-align: center;
   line-height: 1.3;
   padding: 2rem;
   color: var(--light-cyan);
+margin:1rem 0;
 }
 
 .dice {
