--- a/styles/index.css
+++ b/styles/index.css
@@ -34,14 +34,15 @@ h1 span {
 h1 {
   text-align: center;
   color: var(--neon-green);
+font-weight:400;
 }
 blockquote {
   font-size: clamp(2rem, 4vw, 2.8rem);
   text-align: center;
   line-height: 1.3;
-  padding: 2rem;
+  padding: 2rem 3rem;
   color: var(--light-cyan);
-margin:1rem 0;
+margin:2rem 0;
 }
 
 .dice {
