--- a/styles/index.css
+++ b/styles/index.css
@@ -25,6 +25,8 @@ main {
   display: flex;
   flex-direction: column;
   position: relative;
+align-items:center;
+justify-content:center;
 }
 h1,
 h1 span {
