--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 @import url(./reset.css);
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;800&display=swap");
 :root {
   --light-cyan: hsl(193, 38%, 86%);
   --neon-green: hsl(150, 100%, 66%);
@@ -30,9 +30,9 @@ main {
 }
 h1,
 h1 span {
-  font-size: 1.5rem;
+  font-size: clamp(1.5rem, 3vw, 2rem);
   margin-top: 2rem;
-  font-weight: lighter;
+  font-weight: 300;
 }
 h1 {
   text-align: center;
