--- a/styles/index.css
+++ b/styles/index.css
@@ -33,20 +33,24 @@ h1 span {
   font-size: clamp(1.5rem, 3vw, 2rem);
   margin-top: 2rem;
   font-weight: 300;
+  letter-spacing: 0.3rem;
 }
 h1 {
   text-align: center;
   color: var(--neon-green);
 }
 blockquote {
-  font-size: clamp(2rem, 4vw, 2.8rem);
   text-align: center;
   line-height: 1.3;
   padding: 2rem 3rem;
   color: var(--light-cyan);
   margin: 2rem 0;
+  font-weight: 800;
 }
-
+blockquote,
+blockquote em {
+  font-size: clamp(2rem, 4vw, 2.8rem);
+}
 .dice {
   bottom: -2rem;
   width: 5rem;
